# src/swagger-output.json
@@ -1174,6 +1174,152 @@
           }
         }
       }
+    },
+    "/api/chatRoom/": {
+      "put": {
+        "tags": [
+          "ChatRoom - 커뮤니티 댓글 테이블"
+        ],
+        "description": "커뮤니티 게시글에 대한 새로운 댓글 추가",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "post_idx": {
+                  "type": "number",
+                  "example": 1
+                },
+                "user_idx": {
+                  "type": "number",
+                  "example": 1
+                },
+                "cmt_detail": {
+                  "type": "string",
+                  "example": "댓글 내용 입니다."
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "작성됨"
+          },
+          "500": {
+            "description": "내부 서버 오류"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ChatRoom - 커뮤니티 댓글 테이블"
+        ],
+        "description": "커뮤니티 사용자에 대한 댓글 조회",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_idx": {
+                  "type": "number",
+                  "example": 1
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "성공"
+          },
+          "500": {
+            "description": "내부 서버 오류"
+          }
+        }
+      }
+    },
+    "/api/chatRoom/all": {
+      "post": {
+        "tags": [
+          "ChatRoom - 커뮤니티 댓글 테이블"
+        ],
+        "description": "커뮤니티 게시글에 대한 댓글 조회",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "post_idx": {
+                  "type": "number",
+                  "example": 1
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "성공"
+          },
+          "500": {
+            "description": "내부 서버 오류"
+          }
+        }
+      }
+    },
+    "/api/chatRoom/update": {
+      "post": {
+        "tags": [
+          "ChatRoom - 커뮤니티 댓글 테이블"
+        ],
+        "description": "커뮤니티 댓글 정보 갱신",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cmt_idx": {
+                  "type": "number",
+                  "example": 1
+                },
+                "post_idx": {
+                  "type": "number",
+                  "example": 1
+                },
+                "user_idx": {
+                  "type": "number",
+                  "example": 1
+                },
+                "cmt_detail": {
+                  "type": "string",
+                  "example": "수정된 댓글입니다."
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "성공"
+          },
+          "500": {
+            "description": "내부 서버 오류"
+          }
+        }
+      }
     }
   }
 }
